# tiny-ocaml

./: .gitignore  Makefile  README.md  dune-project  pyproject.toml  tiny.opam
src/: crowsnest.ml  dune  hello.ml  picnic.ml
test/: dune
test/scripts/: Makefile
test/scripts/01_hello/: test.py
test/scripts/02_crowsnest/: test.py
test/scripts/03_picnic/: test.py
test/scripts/06_wc/: Makefile
