[tool.poetry]
name = "tiny-ocaml"
version = "0.1.0"
description = ""
authors = ["Sundy Yaputra <sundy.yap@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
